# artificial-non-intelligence-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  settings.py  setup.py
.github/workflows/: deploy_on_tag.yml
api/: fast_ormar_api.py  import_json.py  main.py  models.py
artificialnonintelligence/scraper/: models.py
artificialnonintelligence/scraper/crawlers/: oan.py
data/: all_tweets_final.csv  five_hundred_fake_tweets_1.json  five_hundred_fake_tweets_aggressive.json  five_hundred_fake_tweets_non_aggressive.json
frontend/: index.html
streamlit/: analysis.py
