[project]
name = "artificial-non-intelligence-api"
version = "0.3.11"
description = "A deep learning generated web game to raise awareness about AI and trolls, and to have fun. API part. Made by @bolinocroustibat, @Noza8828 and @phlln."
authors = [
    { name = "Adrien Carpentier", email = "me@adriencarpentier.com" },
    { name = "Philip Lin", email = "philip.lin@gmail.com" },
    { name = "Dilnoza Mirdjalilova", email = "dmirdjalilova@gmail.com" },
]
dependencies = [
    "psycopg>=3.1.9",
    "psycopg-binary>=3.1.9",
    "fastapi<1.0.0,>=0.79.0",
    "gunicorn>=23.0.0",
    "sentry-sdk<2.0.0,>=1.15.0",
    "uvicorn<1.0.0,>=0.14.0",
    "python-dotenv>=1.1.0",
]
requires-python = ">=3.10,<3.14"
dynamic = ["classifiers", "classifiers"]
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/bolinocroustibat/artificial-non-intelligence-api"

[tool.ruff]
line-length = 100
lint = { extend-select = ["I"] }

# Necessary to avoid issues when installing when using `pip install .`
[tool.setuptools]
py-modules = []

[dependency-groups]
dev = ["ruff>=0.15.0"]
